--- a/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
@@ -5,45 +5,47 @@ We hebben eerder gedefinieerd wat modifiers zijn, een modifier neemt een shape a
 
 \lstinputlisting[style=densecode]{Examples/Modifiers.hs}
 
-\subsubsection{Events}
-\todo{Defaults}
-Stel dat we het rondje van kleur willen laten veranderen als er op geklikt wordt, dan moet het rondje zich interesseren voor klikevents, verder moeten we een case toevoegen aan onze handler om te specificeren wat er moet gebeuren als er op het rondje geklikt wordt. Belangrijk om te zien hier is dat er een default gebruikt wordt. Voor events is de default een record zonder ID die niet geinteresseerd is in events. Als we het standaardrecord gebruiken voor een element reageert dit element nerges op. We moeten dit standaardrecord dus vullen, er moet een eventId bedacht worden en er moet aangegeven worden waar deze shape naar wil luisteren. Hieronder hebben we het rondje een eventId circle gegeven, en aangegeven dat we ge"interesseerd zijn in muiskliks.
-
-\lstinputlisting[style=densecode]{Examples/Events.hs}
-
 \subsubsection{Containers}
-Hierboven is al laten zien hoe een container node eruit ziet. Containers worden gebruikt om elementen te groeperen, maar nog belangrijker, binnen een container heerst een absoluut coordinatenstelsel. Er kan dus absoluut getekend worden binnen een container, en daarna kan deze container relatief verplaatst worden. Het is gebruikelijk om een container met de grootte van het canvas als root te hebben, al wordt dit niet geforceerd. Het volgende voorbeeld laat zien hoe een mickey mouse figuur getekend kan worden.
+Containers worden gebruikt om elementen te groeperen, maar nog belangrijker, binnen een container heerst een eigen coördinatenstelsel. Er kan dus absoluut getekend worden binnen een container, en daarna kan deze container relatief verplaatst worden. Het is gebruikelijk om een container met de grootte van het canvas als root te hebben, al wordt dit niet geforceerd. Het volgende voorbeeld laat zien hoe een Mickey Mouse-figuur getekend kan worden.
 
 \lstinputlisting[style=densecode]{Examples/Containers.hs}
 
-Wat het meest interessante van dit voorbeeld is, is hoe de mickey mouse shapes over het canvas verplaatst worden door een \inlinecode{Translate}. Daarnaast wordt ook getoont dat bijvoorbeeld \inlinecode{Rotate}, \inlinecode{Fill} en \inlinecode{Offset} ook werken op containers. Voor de exacte functie van deze translaties kan in de documentatie gekeken worden. 
+\subsubsection{Defaults} \label{subsubsec:handleiding_defaults}
+Canvas.hs definieert een nieuwe dataklasse \inlinecode{Defaults}, deze dataklasse kunnen we gebruiken om het makkelijker te maken standaardopties te definiëren voor voor ingewikkelde of uitgebreidde datastructuren. De klasse wordt gebruikt voor de \inlinecode{Text}- en \inlinecode{Event}-shapes (zie Hieronder). Deze klasse definieert één functie (\inlinecode{defaults}) die standaardwaarden voor een bepaald datatype moet opleveren. In het geval van \inlinecode{Event} is dat voor het type \inlinecode{EventData} en in het geval van \inlinecode{Text} voor het type \inlinecode{TextData}. Hoe \inlinecode{Defaults} precies gebruikt wordt wordt hieronder duidelijk.
+
+\subsubsection{Events}
+Stel dat we het rondje van kleur willen laten veranderen als er op geklikt wordt, dan moet het rondje zich interesseren voor klikevents, verder moeten we een case toevoegen aan onze handler om te specificeren wat er moet gebeuren als er op het rondje geklikt wordt. Belangrijk om te zien hier is dat er een default gebruikt wordt (zie hierboven). Voor events is de default een record zonder ID die niet geinteresseerd is in events. Als we het standaardrecord gebruiken voor een element reageert dit element nergens op. We moeten dit standaardrecord dus vullen, er moet een eventId bedacht worden en er moet aangegeven worden waar deze shape naar wil luisteren. Hieronder hebben we het rondje een eventId circle gegeven, en aangegeven dat we ge"interesseerd zijn in muiskliks.
+
+\lstinputlisting[style=densecode]{Examples/Events.hs}
+
+Wat het meest interessante van dit voorbeeld is, is hoe de mickey mouse shapes over het canvas verplaatst worden door een \inlinecode{Translate}. Daarnaast wordt ook getoond dat bijvoorbeeld \inlinecode{Rotate}, \inlinecode{Fill} en \inlinecode{Offset} ook werken op containers. Voor de exacte functie van deze translaties kan in de documentatie gekeken worden. 
 
 \subsubsection{Tekst}
 
-Canvas.hs ondersteunt ook tekst, het tekenen van tekst is speciaal omdat er veel parameters meegegeven kunnen worden. Net als bij de events kan een default waarde aangepast worden. Standaard is tekst in Canvas.hs niet onderstreept, dikgedrukt of schuin, links uitgelijnt en wordt Arial 12 als lettertype gebruikt. Belangrijk om te weten is dat als een lettertype niet aanwezig is, dat de client dan een eigen lettertype kiest (zoals elke browser dat doet).
+Canvas.hs ondersteunt ook tekst, het tekenen van tekst is speciaal omdat er veel parameters meegegeven kunnen worden. Net als bij de events kan een default (zie \fullref{subsubsec:handleiding_defaults}) waarde aangepast worden. Standaard is tekst in Canvas.hs niet onderstreept, dikgedrukt of schuin, links uitgelijnt en wordt Arial 12 als lettertype gebruikt. Belangrijk om te weten is dat als een lettertype niet aanwezig is, dat de client dan een eigen lettertype kiest (zoals elke browser dat doet).
 
 Hieronder worden alle mogelijkheden met tekst in een woordweb getoond, let vooral op hoe in de defaults steeds een bepaalde sleutel aangepast wordt.
 \lstinputlisting[style=densecode]{Examples/Text.hs}
 
 \subsubsection{Actions 101}
 
-Binnen Canvas.hs kunnen we bestandjes lokaal en over afstand opslaan, om dit te illustreren maken we eerst een simpele demo die "Hello World" download in de browser als er op een knop gedrukt wordt. We moeten dus een knop tekenen die ge"interesseerd is in muiskliks, een handler geval schrijven voor wat er moet gebeuren als er op die knop geklikt wordt en dan moeten we een \inlinecode{Download} actie uitvoeren. Voor de duidelijkheid zijn er twee extra functies in dit voorbeeld, \inlinecode{drawAll} levert een shape op voor het canvas, \inlinecode{downloadAction} levert de specifieke downloadactie op.
+Binnen Canvas.hs kunnen we bestandjes lokaal en over afstand opslaan, om dit te illustreren maken we eerst een simpele demo die "Hello World" download in de browser als er op een knop gedrukt wordt. We moeten dus een knop tekenen die geïnteresseerd is in muiskliks, een handler geval schrijven voor wat er moet gebeuren als er op die knop geklikt wordt en dan moeten we een \inlinecode{Download} actie uitvoeren. Voor de duidelijkheid zijn er twee extra functies in dit voorbeeld, \inlinecode{drawAll} levert een shape op voor het canvas, \inlinecode{downloadAction} levert de specifieke downloadactie op.
 
 \lstinputlisting[style=densecode]{Examples/Actions101.hs}
 
 \subsubsection{Resize}
 
-Tot nu toe hebben we alles op vaste size canvas getekend, het is echter mogelijk om andere formaten canvas te gebruiken. Om de grootte van het canvas aan te passen moet er een \inlinecode{DisplayType} actie uitgevoerd worden, daarnaast moet er ook gereageerd worden op een \inlinecode{Resize} event. Het onderstaande programma tekent een rondje in het midden van het scherm, en zorgt ervoor dat de straal van het rondje meeschaalt met de hoogte en breedte. Als we op "f" drukken, dan vergroot het canvas tot de grootte van het browservenster, als we "w" indrukken wordt het canvas weer 900 bij 600, en als we "f11" indrukken vragen we de browser om fullscreen te gaan.
+Tot nu toe hebben we alles op vaste size canvas getekend, het is echter mogelijk om andere formaten canvas te gebruiken. Om de grootte van het canvas aan te passen moet er een \inlinecode{DisplayType}-actie uitgevoerd worden, daarnaast moet er ook gereageerd worden op een \inlinecode{Resize}-event. Het onderstaande programma tekent een rondje in het midden van het scherm, en zorgt ervoor dat de straal van het rondje meeschaalt met de hoogte en breedte. Als we op "f" drukken, dan vergroot het canvas tot de grootte van het browservenster, als we "w" indrukken wordt het canvas weer 900 bij 600, en als we "f11" indrukken vragen we de browser om fullscreen te gaan.
 
 \lstinputlisting[style=densecode]{Examples/Resize.hs}
 
 \subsubsection{Blocking Output}
-Binnen Canvas.hs zijn er een aantal acties blocking. Bij deze acties kan geen shape of andere acties meegestuurd worden. Deze blocking actie wordt aan de serverkant uitgevoerd en levert een event op. Omdat de acties op deze manier lokaal uitgevoerd worden, zou er als we een shape mee konden geven een kans bestaan dat we twee shape outputs geven, die Canvas.hs dan opeens beide zou moeten tekenen. Het onderstaande voorbeeld leest een bestandje en zet het resultaat op het canvas, hierbij wordt gebruik gemaakt van de \inlinecode{nothing} functie uit \inlinecode{CanvasHs}, deze functie returnt simpelweg een lege output zodat het canvas niet veranderd.
+Binnen Canvas.hs zijn er een aantal acties blocking. Bij deze acties kan geen shape of andere acties meegestuurd worden. Deze blocking actie wordt in de module uitgevoerd en levert een event op. Het onderstaande voorbeeld leest een bestandje en zet het resultaat op het canvas, hierbij wordt gebruik gemaakt van de \inlinecode{nothing} functie uit \inlinecode{CanvasHs}, deze functie returnt simpelweg een lege output zodat het canvas niet veranderd.
 
 \lstinputlisting[style=densecode]{Examples/Blocking.hs}
 
 \subsubsection{Timers 101}
-Soms willen we dat er iets regelmatig iets gebeurd op het canvas, daarvoor hebben we Timers, een \inlinecode{Timer} is een actie die zorgt dat er elke n milliseconde een event plaatsvind in de haskell code, hierop kunnen we reageren door gewoon simpelweg andere output terug te geven. Dit eenvoudige voorbeeld hieronder reageert op een \inlinecode{Tick} event door simpelweg een getal op het canvas met een te verhogen.
+Soms willen we dat er iets regelmatig iets gebeurd op het canvas, daarvoor hebben we Timers, een \inlinecode{Timer} is een actie die zorgt dat er elke n milliseconde een event plaatsvindt, hierop kunnen we reageren door gewoon simpelweg andere output terug te geven. Dit eenvoudige voorbeeld hieronder reageert op een \inlinecode{Tick} event door simpelweg een getal op het canvas met één te verhogen.
 
 \lstinputlisting[style=densecode]{Examples/Timers.hs}
 
