Itemize bug gefixed

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
@@ -19,7 +19,7 @@ Soms zal de programmeur een IO-bewerking willen uitvoeren, zoals het downloaden 
 Er zijn bepaalde acties die de uitvoer van het programma blokkeren, zoals het laden van een bestand. Het belangrijkste voor de programmeur is dat het niet mogelijk is om zowel een BlockingAction als een Shape terug te geven. 
     \item[Defaults]
 Sommige elementen in de grafische boom bevatten veel mogelijkheden, zo kan tekst een ander font hebben, een andere grootte, schuin staan, dik zijn, etc. Daarom zijn er defaults gemaakt, dit is een functie die een aantal standaardwaarden teruggeeft. Voor tekst is dit bijvoorbeeld Arial, 12 pixels groot, niet bold of schuin en links uitgelijnd.
-\end{description}
+\end{itemize}
 
 \subsection{Canvas.hs 101}
 Om te beginnen introduceren we hier eerst een voorbeeld van een programma dat een rondje tekent. Zoals hierboven uitgelegd moet eerst een handler gedefinieerd worden. Deze zal zijn state samen met een output moeten teruggeven.
