--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -28,7 +28,7 @@ In de basis zal Canvas.hs dezelfde functionaliteit ondersteunen als de oude graf
 	\begin{enumerate}[label={R\arabic{enumi}.\arabic*}]
 		\item \label{req:colors:lines} De library dient lijnkleuren instelbaar te maken.
 		\item \label{req:colors:fill} De library dient vulkleuren instelbaar te maken.
-		\item \label{req:colors:fill:gradient} De library kan eventueel gradients als vulkleur gebruiken.
+		\item \label{req:colors:fill:gradient} De library kan eventueel gradiënten als vulkleur gebruiken.
 	\end{enumerate}
 	\item De library dient events vanuit JavaScript door te geven aan het Haskell-programma van de student.
 	\begin{enumerate}[label={R\arabic{enumi}.\arabic*}]
