--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -15,7 +15,9 @@ In dit project is als antwoord op bovenstaande vraag \emph{Canvas.hs} ontwikkeld
 \end{figure}
 
 \subsubsection{Canvas.hs}
-Canvas.hs is ontwikkeld met het oog op gebruiksgemak en eenvoud zonder de mogelijkheid tot uitbreiding en het toevoegen van geavanceerde functionaliteit onnodig te beperken.
+Canvas.hs is ontwikkeld met het oog op gebruiksgemak en eenvoud zonder de mogelijkheid tot uitbreiding en het toevoegen van geavanceerde functionaliteit onnodig te beperken. 
+
+Op basis van het principe van event driven I/O kan de gebruiker met behulp van de library een eventhandeler implementeren. De eventhandeler van de gebruiker genereert op basis van gebeurtenissen nieuwe output.
 
 Canvas.hs is als library te installeren via \emph{Cabal}, de package manager voor Haskell programma's. In \fullref{sec:gebruikershandleiding} kan gelezen worden hoe de library gebruikt kan worden. Als een Haskell programma via de aangeboden API de library aanroept, zal een zeer lichte HTTP en Websocket server opgestart worden. De library zal vervolgens een browser opstarten. Deze browser laadt de JavaScript code van de library en toont vervolgens een HTML5 canvas waar op getekend kan worden door het Haskell programma van de gebruiker. In \autoref{hoofdstuk:ontwerp} wordt het ontwerp van Canvas.hs uitgebreider beschreven.
 
