taaldingetjes oganisatie deel1

--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -5,7 +5,7 @@ Tijdens het ontwikkelen van de eerste versie van Canvas.hs zijn er onderdelen va
 Bij het ontwikkelen van software is het naast een goede projectorganisatie ook zaak dat er door ontwikkelaars goed samengewerkt kan worden op technisch vlak. Daarbij is het belangrijk elkaar te kunnen controleren terwijl de projectgenoten elkaar tegelijkertijd niet in de weg moeten zitten. Hoe dit tijdens de ontwikkeling van Canvas.hs georganiseerd is kan gelezen worden in \autoref{sec:technische_organisatie}.
 
 \section{Scrum} \label{sec:scrum}
-Om de aanpak van het project te structureren en om ervoor te zorgen dat de teamleden van het project weten wat er van hen verlangt wordt, is er een projectmanagementmethode gebruikt. Een populaire managementmethode voor software projecten is scrum. Binnen scrum wordt er gewerkt met zogenaamde vaste en korte, periodes waarin een vooraf geselecteerde lijst met taken afgewerkt wordt. Bij aanvang van een nieuwe periode wordt een deze lijst van taken samengesteld. Elke periode wordt er een werkend prototype afgeleverd. Er is met de ontwikkeling van Canvas.hs gewerkt met een variant van scrum.
+Om de aanpak van het project te structureren en om ervoor te zorgen dat de teamleden van het project weten wat er van hen verlangt wordt, is er een projectmanagementmethode gebruikt. Een populaire managementmethode voor software projecten is scrum. Binnen scrum wordt er gewerkt met vaste en korte periodes waarin een vooraf geselecteerde lijst met taken afgewerkt wordt. Bij aanvang van een nieuwe periode wordt een lijst van taken voor die periode samengesteld. Elke periode wordt er een werkend prototype afgeleverd. Er is met de ontwikkeling van Canvas.hs gewerkt met een variant van scrum.
 
 Verschillende rollen zijn toegewezen aan de betrokken personen. Elke samenkomst zijn er scrumbesprekingen gehouden en bij aanvang van een nieuwe fase zijn er sprintbesprekingen gehouden. Daarbij zijn elke keer opnieuw de project– en sprintbacklogs samengesteld en bijgewerkt.
 
@@ -13,10 +13,10 @@ Verschillende rollen zijn toegewezen aan de betrokken personen. Elke samenkomst 
 Er is een verdeling van verantwoordelijkheden gemaakt. Hieronder een kort overzicht van de teamleden en hun verantwoordelijkheden.
 \begin{enumerate}
     \item \emph{J. van Doorn} had de taak van \emph{scrum master} en was verantwoordelijk voor het testen van de software.
-    \item \emph{P.T. Jager} was notulist voor alle besprekingen en samen met L.J. Buit verantwoordelijk voor de Haskell code.
-    \item \emph{L.J. Buit} was verantwoordelijk voor het protocol en samen met P.T. Jager verantwoordelijk voor de Haskell code.
-    \item \emph{M.J. Roo} was samen met M.J. Scheepers verantwoordelijk voor de JavaScript code.
-    \item \emph{M.J. Scheepers} was verantwoordelijk voor de gebruiksvriendelijkheid van de API en samen met M.J. Roo verantwoordelijk voor de JavaScript code.
+    \item \emph{P.T. Jager} was notulist voor alle besprekingen en samen met L.J. Buit verantwoordelijk voor de Haskell-code.
+    \item \emph{L.J. Buit} was verantwoordelijk voor het protocol en samen met P.T. Jager verantwoordelijk voor de Haskell-code.
+    \item \emph{M.J. Roo} was samen met M.J. Scheepers verantwoordelijk voor de JavaScript-code.
+    \item \emph{M.J. Scheepers} was verantwoordelijk voor de gebruiksvriendelijkheid van de API en samen met M.J. Roo verantwoordelijk voor de JavaScript-code.
 \end{enumerate}
 Naast de teamleden nam de opdrachtgever de rol van \emph{product owner} aan. Hiermee is de opdrachtgever onder andere verantwoordelijk voor het aangeven van de volgorde waarin features ge\"implementeerd worden.
 
