--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -1,6 +1,6 @@
 % !TEX spellcheck = nl_NL
 \chapter{Organisatie} \label{hoofdstuk:organisatie}
-Tijdens het ontwikkelen van de eerste versie van Canvas.hs zijn er onderdelen van de scrum projectmanagement methode toegepast om voor een goede planning en duidelijke afspraken binnen de projectgroep te zorgen. De organisatie van het projectmanagement wordt verder besproken in de volgende sectie, \autoref{sec:scrum}.
+Tijdens het ontwikkelen van de eerste versie van Canvas.hs zijn er onderdelen van de scrum projectmanagement methode toegepast om voor een goede planning en duidelijke afspraken binnen de projectgroep te zorgen. Dit wordt besproken in \autoref{sec:scrum}.
 
 Bij het ontwikkelen van software is het naast een goede projectorganisatie ook zaak dat er door ontwikkelaars goed samengewerkt kan worden op technisch vlak. Daarbij is het belangrijk elkaar te kunnen controleren terwijl de projectgenoten elkaar tegelijkertijd niet in de weg moeten zitten. Hoe dit tijdens de ontwikkeling van Canvas.hs georganiseerd is kan gelezen worden in \autoref{sec:technische_organisatie}.
 
@@ -31,7 +31,7 @@ Taken worden bijgehouden in de \emph{backlogs}. Er is een backlog voor alle take
 \end{center}
 \end{figure}
 
-De lijst van ontwikkeltaken wordt bijgehouden op het \emph{GitHub} platform --{hier-over} meer in \fullref{sec:technische_organisatie}. Deze ontwikkeltaken worden op GitHub \emph{issues} genoemd. Ontwikkeltaken en andere taken worden gezamenlijk bijgehouden op \emph{Trello}. Met Trello kan een online takenbord gemaakt worden waarop de taken verdeeld zijn over de verschillende backlogs. In \autoref{fig:trello} is te zien welke status een taak heeft aan de kolom waar deze in staat. Mogelijke statussen zijn dat deze in de Backlog, in de Sprint Backlog, op In progress, op Done of op Done final staat. Hieronder wordt na het kopje \emph{Planning} besproken wat deze statussen inhouden. Door het gebruik van Trello hebben alle betrokkenen een goed inzicht in de taken die nog openstaan en de taken die reeds zijn uitgevoerd. Dit vergemakkelijkt vooral de taken van de scrummaster.
+De lijst van ontwikkeltaken wordt bijgehouden op het \emph{GitHub} platform --{hier-over} meer in \fullref{sec:technische_organisatie}. Deze ontwikkeltaken worden op GitHub \emph{issues} genoemd. Ontwikkeltaken en andere taken worden gezamenlijk bijgehouden op \emph{Trello}. Met Trello kan een online takenbord gemaakt worden waarop de taken verdeeld zijn over de verschillende backlogs. In \autoref{fig:trello} is te zien welke status een taak heeft aan de kolom waar deze in staat. Mogelijke statussen van een taak zijn: in de Backlog, in de Sprint Backlog, In progress, Done of Done final. Hieronder wordt na het kopje \emph{Planning} besproken wat deze statussen inhouden. Door het gebruik van Trello hebben alle betrokkenen een goed inzicht in de taken die nog openstaan en de taken die reeds zijn uitgevoerd. Dit vergemakkelijkt vooral de taken van de scrummaster.
 
 \subsubsection{Planning}
 Bij scrum wordt gebruikt gemaakt van sprints. Dit zijn korte termijnen van --in ons geval-- twee weken waarbinnen een aantal features toegevoegd worden aan het bestaande systeem. Voorafgaand aan elke sprint wordt bepaald welke features in de komende sprint geïmplementeerd zullen worden. Als er tijdens een sprint nieuwe taken bedacht worden, dan worden deze op de backlog gezet voor volgende sprints.
