--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -21,7 +21,7 @@ Op basis van het principe van event driven I/O kan de gebruiker met behulp van d
 
 Canvas.hs is als library te installeren via \emph{Cabal}, de package manager voor Haskell programma's. In \fullref{sec:gebruikershandleiding} kan gelezen worden hoe de library gebruikt kan worden. Als een Haskell programma via de aangeboden API de library aanroept, zal een zeer lichte HTTP en Websocket server opgestart worden. De library zal vervolgens een browser opstarten. Deze browser laadt de JavaScript code van de library en toont vervolgens een HTML5 canvas waar op getekend kan worden door het Haskell programma van de gebruiker. In \autoref{hoofdstuk:ontwerp} wordt het ontwerp van Canvas.hs uitgebreider beschreven.
 
-De ontwikkelde library is uitgebreid getest. Dit geldt zowel voor de geschreven Haskell code als de JavaScript code. In \autoref{hoofdstuk:testplan} staat het testplan dat bij het maken van tests gebruikt is en in \autoref{hoofdstuk:resultaten} staan de resultaten van de tests.
+De ontwikkelde library is uitgebreid getest. Dit geldt zowel voor de geschreven Haskell code als de JavaScript code. In \autoref{hoofdstuk:testplan} staat het testplan wat onze testmethodiek beschrijft en in \autoref{hoofdstuk:resultaten} staan de resultaten van de tests.
 
 \subsubsection{Organisatie}
 Bij de ontwikkeling van Canvas.hs is vooraf een managementmethode vastgesteld. Daarnaast is er tooling gebruikt om de samenwerking tussen ontwikkelaars te vergemakkelijken. \autoref{hoofdstuk:organisatie} beschrijft hoe dit alles is ingericht en \autoref{hoofdstuk:evaluatie} beschrijft hoe de afspraken en tools uiteindelijk zijn toegepast en wat de ervaringen hiermee waren.
