taaldingetjes requirements, meer wijzigingen

--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -106,7 +106,7 @@ In eerste instantie gaan studenten van het vak Functioneel Programmeren gebruik 
 		\item \label{req:monadisch} De library dient zonder monadische functies te gebruiken te zijn.
 		\item \label{req:maintenance} De library dient makkelijk te onderhouden zijn.
 		\begin{enumerate}[label={R\arabic{enumi}.\arabic*}]
-			\item De library dient gedocumenteert te zijn.
+			\item De library dient gedocumenteerd te zijn.
 			\item De library dient modulair opgebouwd te zijn.
 		\end{enumerate}
 	\setcounter{startvalue}{\value{enumi}}
